# LaJournal-backend

./: README.md  build.sh  pyproject.toml  requirements.txt
lajournal/: urls.py
lajournal/settings/: defaults.py  dev.py  prod.py
project/: admin.py  api.py  models.py  schemas.py  services.py
project/migrations/: 0004_delete_token.py  0005_journalentry_is_bookmarked.py  0006_journalentry_json_content.py
